xidlc/tests/invalid/http_stream_client_sse.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidClientStreamCodecService {
    @client-stream
    @stream-codec("sse")
    @post(path = "/upload")
    string upload(sequence<octet> chunk);
};
